# ps-discovery

./: .bandit  .dockerignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  build_release.sh  bump_version.sh  mypy.ini  ps-discovery  pyproject.toml  pytest.ini  requirements-dev-lock.txt  requirements-lock.txt  requirements.txt  run_tests.py  setup.py  setup.sh  test-setup.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: release.yml  test-setup.yml  tests.yml
config-examples/: cloud-only.yaml  database-only.yaml  full-discovery.yaml
docs/: advanced-usage.md  cleanup.md  data_size_analysis.md  mysql.md  output-format.md  performance_considerations.md  testing.md  troubleshooting.md
docs/providers/: README.md  aws.md  gcp.md  heroku.md  neon.md  supabase.md
planetscale_discovery/: __init__.py  __main__.py  cli.py
planetscale_discovery/cloud/: __init__.py  discovery.py  report_generator.py
planetscale_discovery/cloud/analyzers/: __init__.py  aws_analyzer.py  gcp_analyzer.py  heroku_analyzer.py  neon_analyzer.py  supabase_analyzer.py
planetscale_discovery/common/: __init__.py  base_analyzer.py  utils.py
planetscale_discovery/config/: __init__.py  config_manager.py
planetscale_discovery/database/: __init__.py  discovery.py  mysql_discovery.py  report_generator.py
planetscale_discovery/database/analyzers/: __init__.py  config_analyzer.py  data_size_analyzer.py  feature_analyzer.py  performance_analyzer.py  schema_analyzer.py  security_analyzer.py
planetscale_discovery/database/mysql_analyzers/: __init__.py  config_analyzer.py  feature_analyzer.py  performance_analyzer.py  replication_analyzer.py  schema_analyzer.py  security_analyzer.py
requirements/: base.in  dev.in
sql_discovery/: README.md  planetscale_discovery.sql
test-data/: aurora-edge-cases.sql
tests/: __init__.py  conftest.py
tests/fixtures/: aws_responses.py  database_responses.py  heroku_responses.py  neon_responses.py
tests/unit/: __init__.py  test_aws_analyzer_detailed.py  test_aws_aurora_topology.py  test_basic.py  test_cli.py  test_cloud_discovery.py  test_config_analyzer.py  test_config_manager.py  test_data_size_analyzer.py  test_database_discovery.py  test_feature_analyzer.py  test_gcp_analyzer.py  test_heroku_analyzer.py  test_mysql_config_analyzer.py  test_mysql_discovery.py  test_mysql_feature_analyzer.py  test_mysql_performance_analyzer.py  test_mysql_replication_analyzer.py  test_mysql_schema_analyzer.py  test_mysql_security_analyzer.py  test_neon_analyzer.py  test_performance_analyzer.py  test_report_generator.py  test_report_generator_detailed.py  test_schema_analyzer.py  test_security_analyzer.py  test_supabase_analyzer.py  test_utils.py
