[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planetscale-discovery-tools"
version = "1.3.0"
description = "Comprehensive database and cloud infrastructure discovery tools"
authors = [{name = "PlanetScale", email = "engineering@planetscale.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["postgresql", "mysql", "database", "discovery", "cloud", "aws", "gcp", "supabase", "heroku", "neon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]
mysql = [
    "PyMySQL>=1.1.0",
]
aws = [
    "boto3>=1.42.78",
    "botocore>=1.42.78",
]
gcp = [
    "google-cloud-resource-manager>=1.16.0",
    "google-cloud-compute>=1.43.0",
    "google-cloud-monitoring>=2.29.1",
    "google-cloud-alloydb>=0.7.0",
    "google-auth>=2.48.0",
    "google-api-python-client>=2.190.0",
]
supabase = [
    "requests>=2.32.5",
]
heroku = [
    "requests>=2.32.5",
]
neon = [
    "requests>=2.32.5",
]
all = [
    "psycopg2-binary>=2.9",
    "PyMySQL>=1.1.0",
    "boto3>=1.42.78",
    "botocore>=1.42.78",
    "google-cloud-resource-manager>=1.16.0",
    "google-cloud-compute>=1.43.0",
    "google-cloud-monitoring>=2.29.1",
    "google-cloud-alloydb>=0.7.0",
    "google-auth>=2.48.0",
    "google-api-python-client>=2.190.0",
    "requests>=2.32.5",
]

[project.scripts]
ps-discovery = "planetscale_discovery.cli:main"

[project.urls]
Homepage = "https://planetscale.com"
Documentation = "https://docs.planetscale.com"

[tool.setuptools]
packages = {find = {exclude = ["tests*", "*.tests*"]}}
